Correção das resenhas e fichamento investimento residencial

--- a/Materias/2S2020/PED_CE342/Turma_A/240409.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/240409.org
@@ -6,30 +6,35 @@
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
-#+PROPERTY: OBJETIVO_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
-#+PROPERTY: CONCEITOS_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
-#+PROPERTY: ARGUMENTO_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
-#+PROPERTY: DESENVOLVIMENTO_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
-#+PROPERTY: CONCLUSAO_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
-#+PROPERTY: CLAREZA_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
-#+PROPERTY: NOTA_ALL "Atingido totalmente" "Atingido satisfatoriamente" "Atingido parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: OBJETIVO_ALL "totalmente" "satisfatoriamente" "parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: CONCEITOS_ALL "totalmente" "satisfatoriamente" "parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: ARGUMENTO_ALL "totalmente" "satisfatoriamente" "parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: DESENVOLVIMENTO_ALL "totalmente" "satisfatoriamente" "parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: CONCLUSAO_ALL "totalmente" "satisfatoriamente" "parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: CLAREZA_ALL "totalmente" "satisfatoriamente" "parcialmente" "Atingindo minimamente" "Não atingido"
+#+PROPERTY: NOTA_ALL "totalmente" "satisfatoriamente" "parcialmente" "Atingindo minimamente" "Não atingido"
 
 
 * Notas :private:
-
-  #+BEGIN: columnview :maxlevel 3 :id global
+  #+NAME: Nota
+  #+BEGIN: columnview :maxlevel 1 :id global
+  | Tarefa    | Objetivo          | Conceito     | Argumento    | Desenvolvimento   | Clareza           | Nota              |
+  |-----------+-------------------+--------------+--------------+-------------------+-------------------+-------------------|
+  |           |                   |              |              |                   |                   |                   |
+  | Resenha 1 | satisfatoriamente | parcialmente | parcialmente | satisfatoriamente | satisfatoriamente | satisfatoriamente |
   #+END
+
 
 * Resenha  1:  Monetaristas                                         :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido satisfatoriamente
-  :ARGUMENTO: Atingido parcialmente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
-  :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido satisfatoriamente
+  :OBJETIVO: satisfatoriamente
+  :ARGUMENTO: parcialmente
+  :CONCEITOS: parcialmente
+  :DESENVOLVIMENTO: satisfatoriamente
+  :CONCLUSAO: satisfatoriamente
+  :CLAREZA:  satisfatoriamente
+  :NOTA:     satisfatoriamente
   :END:
   
 ** Comentários individuais 
