--- a/Materias/2S2020/PED_CE342/Turma_C/257748.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/257748.org
@@ -29,7 +29,7 @@
   :DESENVOLVIMENTO: Atingido parcialmente
   :CONCLUSAO: Atingindo minimamente
   :CLAREZA:  Atingido parcialmente
-  :NOTA:     Atingindo minimamente
+  :NOTA:     Atingido parcialmente
   :END:
 
 ** Comentários individuais 
